# Kajak-Games-Finlandia-Jam

./: CMakeLists.txt  README.md
assets/: config.txt
include/Jam/: AnimatedSprite.hpp  ConfigManager.hpp  Entity.hpp  Instance.hpp  Layer.hpp  Layer.inl  ParticleEmitter.hpp  PostEffect.hpp  PostProcessor.hpp  PostProcessor.inl  Randomizer.hpp  Randomizer.inl  ResourceManager.hpp  Scene.hpp
include/Jam/Entities/: GenericEntity.hpp  GenericEntity.inl  InterpolatesTransform.hpp  ListensMessages.hpp  Obstacle.hpp  Particle.hpp  Player.hpp  Storm.hpp  Text.hpp
include/Jam/Scenes/: LevelScene.hpp  LevelScene.hpp.orig  TitleScene.hpp
server/: package-lock.json  package.json  tsconfig.json  tslint.json
server/src/: action.ts  connection.ts  global.ts  index.ts  level.ts  move.ts  package.ts  packageManager.ts  packages.ts  player.ts  scoredata.ts  session.ts  shoot.ts  tick.ts  toClient.ts  toClientPackages.ts  vec.ts
server/src/actions/: move.ts  shoot.ts
server/src/controllers/: session.ts
server/src/routes/: index.ts
server/src/services/: config.ts  router.ts
server/src/session/: index.ts  level.ts  player.ts  scoredata.ts
server/src/util/: randomizer.ts  socket.ts  timer.ts  vec.ts
src/: AnimatedSprite.cpp  CMakeLists.txt  ConfigManager.cpp  Entity.cpp  Instance.cpp  Layer.cpp  ParticleEmitter.cpp  PostEffect.cpp  PostProcessor.cpp  Randomizer.cpp  ResourceManager.cpp  Scene.cpp  main.cpp
src/Entities/: InterpolatesTransform.cpp  ListensMessages.cpp  Obstacle.cpp  Particle.cpp  Player.cpp  Storm.cpp  Text.cpp
src/Scenes/: LevelScene.cpp  TitleScene.cpp
